<resources>
    <string name="app_name">Lenmax Prove of delivery</string>
    <string name="idsSetting">Setting</string>
    <string name="idsLogin">Log in</string>
    <string name="idsLogout">Log off</string>
    <string name="idsGetlist">Get list</string>
    <string name="idsDownload">Download</string>
    <string name="idsUpload">Upload</string>
    <string name="idsMailto">Email</string>
    <string name="idsClear">Clear</string>
    <string name="idsHost">Host</string>
    <string name="idsServerName">Server name/address</string>
    <string name="idsDateBase">Database</string>
    <string name="idsCheckUser">Filter by user</string>
    <string name="idsCheckCompany">Filter by company</string>
    <string name="idsAddUserName">Capture \'Received by\'</string>
    <string name="idsCheckSigned">Allow to edit signed docs</string>
    <string name="idsUserName">User name</string>
    <string name="idsPassword">Password</string>
    <string name="idsCompany">Company name</string>
    <string name="idsPrev">Prev</string>
    <string name="idsNext">Next</string>
    <string name="idsYes">Yes</string>
    <string name="idsNo">No</string>
    <string name="idsOK">Ok</string>
    <string name="idsSave">Save</string>
    <string name="idsCancel">Cancel</string>
    <string name="idsRemoveItem">Remove document?</string>
    <string name="idsPhpSuccess">success</string>
    <string name="idsPhpFailure">failure</string>
    <string name="idsShowPassword">Show password</string>
    <string name="idsLocal">Local storage</string>
    <string name="idsServer">Remote server</string>
    <string name="idsUserData">Received by</string>
    <string name="idsFilter">Search</string>
    <string name="idsEnterEmail">Enter your email address</string>
    <string name="idsDisonnect">disconnected</string>
    <string name="idsScan">Check in</string>
    <string name="idsScanNext">Check out</string>
    <string name="idsContine">Scan another container?</string>
    <string name="idsCheckScan">Allow container code scan</string>
    <string name="idsRemoveScan">Remove item?</string>

    <string name="idsUncheckUnload">Checkmark is removed.\nScan another?</string>
    <string name="idsErrorLoad">Barcode is exists\nScan another?</string>
    <string name="idsErrorUnload">Barcode is not found.\nScan another?</string>
    <string name="idsEnterBarcode">Enter barcode manually</string>


    <string name="idsExtPdf">.pdf</string>
    <string name="idsExtPng">.png</string>
    <string name="idsExtTxt">.txt</string>

    <string-array name="local_array">
        <item>Remove Document</item>
        <item>Scan Shipping Container</item>
    </string-array>
<!--
    <string name="idsScan">Check in</string>
    <string name="idsScanNext">Check out</string>
-->
</resources>
