<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.igr.pod.work.SettingActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idsHost"
        />
    <EditText
        android:id="@+id/idEditHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background_normal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/idsServerName"
        />
    <EditText
        android:id="@+id/idEditServerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background_normal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/idsDateBase"
        />
    <EditText
        android:id="@+id/idEditDataBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background_normal"
         />
    <CheckBox
        android:id="@+id/idCheckUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/idsCheckUser"
        />
    <CheckBox
        android:id="@+id/idCheckCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/idsCheckCompany"
        />
    <CheckBox
        android:id="@+id/idAddUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/idsAddUserName"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="end"
        >
        <Button
            android:id="@+id/idBtnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_default_small"
            style="@android:style/Widget.Button.Small"
            android:text="@string/idsSave"
            />
        <Button
            android:id="@+id/idBtnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_default_small"
            style="@android:style/Widget.Button.Small"
            android:text="@android:string/cancel"
            />
    </LinearLayout>
</LinearLayout>
    <!--
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
</RelativeLayout>
    -->
