<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.igr.pod.work.LoginDlgActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idsUserName" />
    <EditText
        android:id="@+id/idEditUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/idsPassword"
        />
    <EditText
        android:id="@+id/idEditPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
         />
    <CheckBox
        android:id="@+id/idShowPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idsShowPassword"
        />
    <TextView
        android:id="@+id/idNameCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/idsCompany"
        />
    <EditText
        android:id="@+id/idEditCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">
        <Button
            android:id="@+id/idLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_default_small"
            style="@android:style/Widget.Button.Small"
            android:text="@string/idsLogin"
            />
        <Button
            android:id="@+id/idBtnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_default_small"
            style="@android:style/Widget.Button.Small"
            android:text="@android:string/cancel"
            />
    </LinearLayout>
</LinearLayout>
    <!--

        tools:ignore="TextFields"
            android:onClick="onLogin"
        android:ems="10"
        </RelativeLayout>
    -->