<?xml version="1.0" encoding="utf-8"?>
<!--
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="?attr/actionBarSize"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/idsLocal"
            />
    </LinearLayout>
    <com.igr.pod.work.ListViewEx
        android:id="@+id/idLocalList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:choiceMode="multipleChoice"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        tools:listitem="@android:layout/simple_list_item_checked"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="4dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/idsServer"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/idsFilter"
            />
        <EditText
            android:id="@+id/idEditFilter"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            />
    </LinearLayout>
    <com.igr.pod.work.ListViewEx
        android:id="@+id/idServerList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:choiceMode="multipleChoice"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        tools:listitem="@android:layout/simple_list_item_checked"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="9"
        >
        <Button
            android:id="@+id/idGetlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@android:drawable/btn_default_small"
            style="@android:style/Widget.Button.Small"
            android:onClick="onGetlist"
            android:text="@string/idsGetlist"
            />
        <Button
            android:id="@+id/idDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default_small"
            style="@android:style/Widget.Button.Small"
            android:onClick="onLoad"
            android:text="@string/idsDownload"
            />
        <Button
            android:id="@+id/idUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@android:drawable/btn_default_small"
            style="@android:style/Widget.Button.Small"
            android:onClick="onUpload"
            android:text="@string/idsUpload"
            />
        <Button
            android:id="@+id/idMailto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@android:drawable/btn_default_small"
            style="@android:style/Widget.Button.Small"
            android:onClick="onMailto"
            android:text="@string/idsMailto"
            />
        <Button
            android:id="@+id/idClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@android:drawable/btn_default_small"
            style="@android:style/Widget.Button.Small"
            android:onClick="onClear"
            android:text="@string/idsClear"
            />
    </LinearLayout>
    <!--
        android:id="@+id/idButtons"
        style="@android:style/Widget.Button.Small"
    -->
        <!--
        </RelativeLayout>
/*
        <ImageButton
            android:id="@+id/idClearButton"
            style="@android:style/Widget.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/idsClear"
            android:onClick="onClear"
            android:text="@string/idsClear"
            app:srcCompat="@android:drawable/ic_delete"
            />
*/
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:drawable/title_bar"
        -->
</LinearLayout>


